--- a/SignUp.html
+++ b/SignUp.html
@@ -34,20 +34,20 @@
         </nav>
     </header>
 
-    <div class="form-container"> 
-        <div class="form-box">
-            <div class="form-content">
-                <h2 class="form-header">Sign Up</h2>
-                <form class="sign-up-form">
-                    <div class="input-field">
+    <div class="formcontainer"> 
+        <div class="formbox">
+            <div class="formcontent">
+                <h2 class="formheader">Sign Up</h2>
+                <form class="signupform">
+                    <div class="inputfield">
                         <input type="text" id="username" placeholder="Username">
                         <i class="fa-solid fa-user"></i>
                     </div>
-                    <div class="input-field">
+                    <div class="inputfield">
                         <input type="email" id="email" placeholder="Email">
                         <i class="fa-solid fa-envelope"></i>
                     </div>
-                    <div class="input-field">
+                    <div class="inputfield">
                         <input type="password" id="password" placeholder="Password">
                         <i class="fa-solid fa-lock"></i>
                     </div>
