--- a/SignIn.html
+++ b/SignIn.html
@@ -33,12 +33,12 @@
         </nav>
     </header>
 
-    <div class="form-container"> 
-        <div class="form-box">
-            <div class="form-content">
-                <h2 class="form-header">Sign In</h2>
-                <form class="sign-in-form">
-                    <div class="input-field">
+    <div class="formcontainer"> 
+        <div class="formbox">
+            <div class="formcontent">
+                <h2 class="formheader">Sign In</h2>
+                <form class="signinform">
+                    <div class="inputfield">
                         <input type="email" id="email" placeholder="Email">
                         <i class="fa-solid fa-envelope"></i>
                     </div>
@@ -48,7 +48,7 @@
                     </div>
                     <button type="submit">Sign In</button>
                 </form>
-                <p class="sign-up-link">Don't have an account? <a href="SignUp.html">Create one now</a></p>
+                <p class="signuplink">Don't have an account? <a href="SignUp.html">Create one now</a></p>
             </div>
         </div>
     </div>
