--- a/SignIn.html
+++ b/SignIn.html
@@ -42,7 +42,7 @@
                         <input type="email" id="email" placeholder="Email">
                         <i class="fa-solid fa-envelope"></i>
                     </div>
-                    <div class="input-field">
+                    <div class="inputfield">
                         <input type="password" id="password" placeholder="Password">
                         <i class="fa-solid fa-lock"></i>
                     </div>
