--- a/SignIn.html
+++ b/SignIn.html
@@ -48,7 +48,7 @@
                     </div>
                     <button type="submit">Sign In</button>
                 </form>
-                <p class="signuplink">Don't have an account? <a href="SignUp.html">Create one now</a></p>
+              <p class="signuplink">Don't have an account? <a href="SignUp.html" style="text-decoration: none; color: #00AA00;">Create one now</a></p>
             </div>
         </div>
     </div>
